# today-park

./: .eslintrc.js  .gitignore  .readthedocs.yml  Procfile  README.md  backend-test.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  setup.cfg
.github/workflows/: backend-test.yml
.gitlab/issue_templates/: Issue_Dev_Template.md  Issue_Plan_Template.md  feature_request.md
.gitlab/merge_request_templates/: MR_template.md
backend/: .coveragerc  Dockerfile  Procfile  README.md  dockerfile  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  requirements.txt  tox.ini
backend/apps/bookmark/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/bookmark/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
backend/apps/core/: exceptions.py  models.py  permissions.py
backend/apps/park/: admin.py  apps.py  models.py  pagination.py  serializers.py  urls.py  views.py
backend/apps/park/migrations/: 0001_initial.py  0002_equipment_parkequipment.py  0002_initial.py  0003_alter_parkequipment_equipment_id_and_more.py  0003_parkequipment_quantity_and_more.py  0004_park_nearby_parks_alter_review_deleted_at.py
backend/apps/review/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/review/migrations/: 0001_initial.py
backend/apps/user/: admin.py  models.py  serializers.py  urls.py  validators.py  views.py
backend/apps/user/migrations/: 0001_initial.py  0002_userkeyword_alter_user_email_alter_user_username.py
backend/config/: gunicorn.conf.py  settings.py  urls.py  wsgi.py
backend/config/settings/: base.py  heroku.py  local.py  production.py  test.py
backend/tests/: README.md  conftest.py  test_example.py
backend/tests/park/: test_api.py
data/ETL/: ETLPipe.py  core.py  db_connect.py  equipment_test.py  etl_equipment.py  etl_nearby_park.py  etl_park.py  etl_pipe.py  etl_prak_equipment.py  models.py  requirments.txt  settings.py  test_ETLPipe.py  utill.py  관악구 산스장 데이터.csv
data/ETL/etl_files/: Gwanak.csv
data/data_analysis/: corona_dlvr.ipynb  corona_dlvr_in_seoul.ipynb  etc_data.ipynb  insight_MYEONGU.ipynb  nearpark_distance_matrix.ipynb  nearpark_kmeans.ipynb
docs/: backend.rst  conf.py  docker.md  index.rst  install.rst  introduce.rst  requirements.txt  retrospect.rst  testing.rst
frontend/: .gitignore  Dockerfile  dockerfile  entrypoint.sh  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.js
frontend/src/actions/: auth.js  index.js
frontend/src/api/: index.js
frontend/src/components/: BasicLink.js  CoronaDeliver.js  CoronaWorkoutKeyword.js  CreateReview.js  DefaultBarChart.js  DefaultPieChart.js  DefualtBarChart.js  DefualtPieChart.js  DeliverPercentByAge.js  DetailList.js  DietAttempt.js  GainWeightByAge.js  GoolgleMap.js  Header.js  Home.js  Login.js  LoginModal.js  Map.js  Mapchart(origin).js  Mapchart.js  Mypage.js  ParkList.js  Review.js  Search.js  Seoul2030.js  (+5 more)
nginx/: README.md  dockerfile  nginx-release.conf  nginx.conf
util/: get_address.py  roadaddress_conv.py
(+39 files in other folders)
