[tool.poetry]
name = "today-park"
version = "0.2.0"
description = "todaypark"
authors = ["Yeonggwang <immutable000@gmail.com>"]

packages = [{ include = "apps" }]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1 || ^3.2 || ^4.0"
djangorestframework = "^3.13.1"
djangorestframework-simplejwt = "^5.0.0"
django-dotenv = "^1.4.2"
django-cors-headers = "^3.10.1"
drf-yasg = "^1.20.0"  
Pillow = "^8.4.0"  
gunicorn = "^20.1.0" 
whitenoise = "^5.3.0"

# extras 는 필요에따라 설치

# poetry install -E docs
Sphinx = { version = "^4.3.2", optional = true }  
furo = { version =  "^2022.1.0", optional = true } 
sphinx-copybutton = { version =  "0.4.0", optional = true } 
sphinx-design = { version =  "0.0.13", optional = true } 
sphinx_inline_tabs = { version =  "2022.1.2b11", optional = true } 

# poetry install -E tests
pytest = { version =  "^6.2.5", optional = true } 
pytest-django = { version =  "^4.5.2", optional = true }
pytest-cov = { version =  "^3.0.0", optional = true }  
tox =  { version =  "^3.24.5", optional = true } 

# poetry install -E mysql
mysqlclient = { version = "^2.1.0", optional = true }

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
isort = "^5.10.1"
black = "^21.12b0"  

[tool.poetry.extras]
docs = [
    "Sphinx",
    "furo",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinx_inline_tabs"
]
tests = [
    "pytest",
    "pytest-django",
    "pytest-cov",
    "tox"
]
mysql = ["mysqlclient"]


[tool.black]
line-length = 88 
include = '\.pyi?$'
# regex
extend-exclude = '''
     migrations
'''

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

